HUE-6620 [home] Fix jumpy breadcrumbs on hover

--- a/desktop/core/src/desktop/static/desktop/less/home.less
+++ b/desktop/core/src/desktop/static/desktop/less/home.less
@@ -74,12 +74,11 @@
 }
 
 .doc-browser-breadcrumbs li {
-  line-height: 54px;
+  line-height: 50px;
   padding: 0;
   vertical-align: middle;
   display: inline-block;
-  height: 36px;
-  border-bottom: 2px solid transparent;
+  height: 50px;
 }
 
 .doc-browser-breadcrumbs .doc-browser-drop-target {
@@ -89,10 +88,6 @@
 .doc-browser-container .active {
   padding: 0 12px;
   color: @cui-gray-800;
-}
-
-.doc-browser-breadcrumbs li:not(.divider):not(.active):hover {
-  border-bottom: @hue-primary-color-dark;
 }
 
 .doc-browser-breadcrumbs a {
